# zootype

./: .gitignore  .goreleaser.yml  LANGUAGES.md  LICENSE  Makefile  README.md  build.sh  zootype.json  zootype.sh  zootype.toml
.github/workflows/: release-gophertype.yml  release.yml
cameltype/: README.md  cameltype.opam  dune  dune-project  main.ml
crabtype/: Cargo.toml  README.md
crabtype/src/: main.rs
dinotype/: README.md  deno.json  main.ts
eggtype/: README.md  main.sh
gophertype/: README.md  config.go  display.go  go.mod  main.go  session.go  stats.go
pythontype/: pyproject.toml
pythontype/pythontype/: __init__.py  main.py
rattype/: Makefile  README.md  main.cpp
